# MoralPlanner

./: .gitignore  AbstractExperiments.py  LICENSE  README.md  RunAbstractExperiments.py  RunInsulinExperiments.py  run_experiments.py  run_me.sh
.github/workflows/: cmake-single-platform.yml
Data/Experiments/2024-11-19 17:10:15/: CostCarlaSteal_0.json  CostCarlaSteal_1.json  CostCarlaSteal_2.json  CostCarlaSteal_3.json  CostCarlaSteal_4.json  CostCarla_0.json  CostCarla_1.json  CostCarla_2.json  CostCarla_3.json  CostCarla_4.json  HalCarlaEqual_0.json  HalCarlaEqual_1.json  HalCarlaEqual_2.json  HalCarlaEqual_3.json  HalCarlaEqual_4.json  HalCarlaHigher_0.json  HalCarlaHigher_1.json  HalCarlaHigher_2.json  HalCarlaHigher_3.json  HalCarlaHigher_4.json  HalCarlaNoStealComp_0.json  HalCarlaNoStealComp_1.json  HalCarlaNoStealComp_2.json  HalCarlaNoStealComp_3.json  HalCarlaNoStealComp_4.json  HalCarlaNoSteal_0.json  HalCarlaNoSteal_1.json  HalCarlaNoSteal_2.json  HalCarlaNoSteal_3.json  HalCarlaNoSteal_4.json  HalHigherCarla_0.json  HalHigherCarla_1.json  HalHigherCarla_2.json  HalHigherCarla_3.json  HalHigherCarla_4.json  experiments_out.csv  grouped_experiments_out.csv
Data/MDPs/: CostCarla.json  CostCarlaSteal.json  DataMPlan-Out.json  DepthTwoSearch.json  HalCarlaEqual.json  HalCarlaHigher.json  HalCarlaNoSteal.json  HalCarlaNoStealComp.json  HalCarlaNoStealHigher.json  HalHigherCarla.json  QValue_Comparisons.xlsx  SecondSearch.json  TestDescriptions.md  check_for_attack.json  combos.json  level_2_prune.json  level_3_unPrune.json  lostInsulin.json  my_test.json  newDomain.json  test.json  windy1.json  windyDrone.json
Data/MDPs/Maximin_Tests/: OneDepth_OneTheory_OneOutcome.json  OneDepth_OneTheory_ThreeOutcomes.json
Data/MDPs/Old/: CostCarla.json  CostCarlaSteal.json  HalCarlaEqual.json  HalCarlaHigher.json  HalCarlaNoSteal.json  HalCarlaNoStealComp.json  HalHigherCarla.json  env.json
Data/MDPs/Tests/: test1.json  test_100Theory.json  test_100Theory_100Rank.json  test_100Theory_25Rank.json  test_100Theory_50Rank.json  test_100Theory_75Rank.json  test_101Theory.json  test_102Theory.json  test_103Theory.json  test_10Theory.json  test_10Theory_3Ranks.json  test_11Theory_6Ranks.json  test_15Theory_3Ranks.json  test_1Theory.json  test_200Theory.json  test_2Theory_2Rank_3Actions.json  test_5Theory.json  test_5Theory_2Ranks.json  test_6Theory_2Ranks.json  test_7Theory_2Ranks.json  test_8Theory_2Ranks.json  test_9Theory_2Ranks.json
Data/MPlan-out/: CostCarlaSteal_0.json  CostCarlaSteal_1.json  CostCarlaSteal_2.json  CostCarlaSteal_3.json  CostCarlaSteal_4.json  CostCarla_0.json  CostCarla_1.json  CostCarla_2.json  CostCarla_3.json  CostCarla_4.json  Debug-MPlan-Out.json  HalCarlaEqual.json  HalCarlaEqual_0.json  HalCarlaEqual_1.json  HalCarlaEqual_2.json  HalCarlaEqual_3.json  HalCarlaEqual_4.json  HalCarlaHigher.json  HalCarlaHigher_0.json  HalCarlaHigher_1.json  HalCarlaHigher_2.json  HalCarlaHigher_3.json  HalCarlaHigher_4.json  HalCarlaNoSteal.json  HalCarlaNoStealComp_0.json  HalCarlaNoStealComp_1.json  HalCarlaNoStealComp_2.json  HalCarlaNoStealComp_3.json  HalCarlaNoStealComp_4.json  HalCarlaNoStealHigher.json  HalCarlaNoSteal_0.json  HalCarlaNoSteal_1.json  HalCarlaNoSteal_2.json  HalCarlaNoSteal_3.json  HalCarlaNoSteal_4.json  HalHigherCarla_0.json  HalHigherCarla_1.json  HalHigherCarla_2.json  HalHigherCarla_3.json  HalHigherCarla_4.json  (+2 more)
Data/RandomMDPs/: Untitled.json
EnvironmentBuilder/: BaseMDP.py  CustomJSON.py  MDPFactory.py  OpenPolicy.py  SaveEnvironment.py  TestBuilder.py  __main__.py  requirements.txt  setup.py  testBuilder-Backup.py
EnvironmentBuilder/Abstract/: AbstractMDP.py  AbstractTheories.py
EnvironmentBuilder/Elder/: ElderProblem.py
EnvironmentBuilder/EnvironmentBuilder/: __main__.py
EnvironmentBuilder/Fatman/: Problem.py  Theories.py
EnvironmentBuilder/GridWorld/: DroneTheories.py  GridWorldProblem.py
EnvironmentBuilder/LostInsulin/: InsulinTheories.py  LostInsulinProblem.py
EnvironmentBuilder/SearchRescue/: SearchRescueProblem.py
EnvironmentBuilder/SocialMedia/: Problem.py
EnvironmentBuilder/Template/: TemplateProblem.py
EnvironmentBuilder/Titanic/: TitanicProblem.py
EnvironmentBuilder/TutorProblem/: TeacherProblem.py  Theories.py
EnvironmentBuilder/outputs/: lostInsulin.json  out.json  waste.json
EnvironmentBuilder/tests/: test_search_rescue.py
MPlan/: CMakeLists.txt  JSONBuilder.cpp  JSONBuilder.hpp  Logger.hpp  Output.cpp  Output.hpp  Outputter.hpp  README.md  REST_App.cpp  REST_App.hpp  Runner.hpp  crow_all.h  main.cpp  time_config.hpp
MPlan/Data/: MDP_test.json  MEHR_test_1.json  WindyDrone.json  combos.json  level_2_prune.json  level_3_unPrune.json  my_test.json  my_test_2.json  newDomain.json  test.json
MPlan/Google_tests/: CMakeLists.txt  ExtractHistories.cpp  ExtractOutcomes.cpp  JsonMDPTest.cpp  MEHRTests.cpp  MO_Test.cpp  TestBase.hpp  test_ExtractHistories.cpp  test_FromSourceFile.cpp  test_JsonToMDP.cpp  test_MEHR.cpp  test_MO_PLAN.cpp  test_QValueCompare.cpp  test_explain.cpp  test_maximin.cpp
MPlan/MEHRPlan_lib/: CMakeLists.txt  Logger.hpp
MPlan/MEHRPlan_lib/Environment/: Action.cpp  Action.hpp  MDP.cpp  MDP.hpp  MDPBuilder.cpp  State.cpp  State.hpp  Successor.cpp  Successor.hpp
MPlan/MEHRPlan_lib/Environment/MoralTheories/: Absolutism.cpp  Absolutism.hpp  DoubleEffect.cpp  DoubleEffect.hpp  HistoryHandler.cpp  HistoryHandler.hpp  Maximin.cpp  Maximin.hpp  MoralTheory.cpp  MoralTheory.hpp  OrdinalCase.cpp  OrdinalCase.hpp  Threshold.cpp  Threshold.hpp  Utilitarianism.cpp  Utilitarianism.hpp
MPlan/MEHRPlan_lib/Planner/: Attack.hpp  AttackType.hpp  BuildHeuristic.cpp  Expecter.cpp  Expecter.hpp  ExtractHistories.cpp  ExtractHistories.hpp  ExtractSolutions.hpp  History.hpp  MEHR.cpp  MEHR.hpp  MO_ILAO_STAR.cpp  MO_Solver.cpp  Policy.cpp  Policy.hpp  PostOrderDFS.cpp  QValue.cpp  QValue.hpp  Solution.cpp  Solution.hpp  Solver.cpp  Solver.hpp
scripts/: AbstractExperiments.py  BuildTest.py  Pipeline.py  RunAbstract.py  RunElder.py  RunInsulin.py  RunSearchRescue.py  RunServer.py  RunTitanic.py
(+120 files in other folders)
